apps/homepage/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          configMap:
            name: homepage-config
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
    - port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.local.lamers.tech`)
      kind: Rule
      services:
        - name: homepage-svc
          port: 3000
  tls:
    secretName: homepage-cert-tls
